Adding tile sides from MoM 1.2.5

--- a/content/MoM/base/tiles.ini
+++ b/content/MoM/base/tiles.ini
@@ -52,6 +52,12 @@ image="../ffg/img/Tile_Dock_2_MAD20.dds"
 [TileSideEntryHall]
 image="../ffg/img/Tile_Entry_Hall_MAD20.dds"
 
+[TileSideHall1]
+image="../ffg/img/Tile_Hall_1_MAD20.dds"
+
+[TileSideHall2]
+image="../ffg/img/Tile_Hall_2_MAD20.dds"
+
 [TileSideHallCorner1]
 image="../ffg/img/Tile_Hall_Corner_1_MAD20.dds"
 
@@ -88,8 +94,8 @@ image="../ffg/img/Tile_Pier_MAD20.dds"
 [TileSideRentalDock]
 image="../ffg/img/Tile_Rental_Dock_MAD20.dds"
 
-[TileSideRooftop]
-image="../ffg/img/Tile_Rooftop_MAD06.dds"
+[TileSideRootCellar]
+image="../ffg/img/Tile_Root_Cellar_MAD20.dds"
 
 [TileSideStorefront]
 image="../ffg/img/Tile_Storefront_MAD20.dds"
@@ -111,6 +117,9 @@ image="../ffg/img/Tile_Street_Corner_3_MAD20.dds"
 
 [TileSideStudy]
 image="../ffg/img/Tile_Study_MAD20.dds"
+
+[TileSideToolShed]
+image="../ffg/img/Tile_Tool_Shed_MAD20.dds"
 
 [TileSideTownSquare]
 image="../ffg/img/Tile_Town_Square_MAD20.dds"
