--- a/content/MoM/cotw/tiles.ini
+++ b/content/MoM/cotw/tiles.ini
@@ -31,6 +31,9 @@ image="../ffg/img/Tile_Old_Oak_MAD09.dds"
 [TileSideOldWell]
 image="../ffg/img/Tile_Old_Well_MAD09.dds"
 
+[TileSidePond]
+image="../ffg/img/Tile_Pond_MAD09.dds"
+
 [TileSideRitualSite]
 image="../ffg/img/Tile_Ritual_Site_MAD09.dds"
 
