--- a/content/MoM/fa/tiles.ini
+++ b/content/MoM/fa/tiles.ini
@@ -4,6 +4,12 @@ image="../ffg/img/Tile_Generator_Room_MAD06.dds"
 [TileSideGraveyard2]
 image="../ffg/img/Tile_Graveyard_2_MAD06.dds"
 
+[TileSideGreenhouse]
+image="../ffg/img/Tile_Greenhouse_MAD06.dds"
+
+[TileSideHallway5]
+image="../ffg/img/Tile_Hallway_5_MAD06.dds"
+
 [TileSideHiddenLaboratory]
 image="../ffg/img/Tile_Hidden_Laboratory_MAD06.dds"
 
