Using new tiles in updated road to legend.

--- a/content/D2E/lor/tiles.ini
+++ b/content/D2E/lor/tiles.ini
@@ -68,10 +68,9 @@ image="../ffg/img/041A.dds"
 traits=outside
 
 [TileSide41B]
-top=72
-left=72
-pps=72
-image="img/041B.png"
+top=407
+left=197
+image="../ffg/img/041B.dds"
 traits=inside
 
 [TileSide42A]
