--- a/content/D2E/mob/tiles.ini
+++ b/content/D2E/mob/tiles.ini
@@ -42,10 +42,9 @@ image="../ffg/img/081A.dds"
 traits=outside swamp bridge sludge
 
 [TileSide81B]
-top=72
-left=72
-pps=72
-image="img/081B.png"
+top=249.5
+left=236.5
+image="../ffg/img/081B.dds"
 traits=inside
 
 [TileSide82A]
@@ -91,10 +90,9 @@ image="../ffg/img/085A.dds"
 traits=outside swamp
 
 [TileSide85B]
-top=72
-left=72
-pps=72
-image="img/085B.png"
+top=197
+left=197
+image="../ffg/img/085B.dds"
 traits=inside
 
 [TileSide86A]
@@ -128,8 +126,7 @@ image="../ffg/img/Entrance05.dds"
 traits=outside swamp
 
 [TileSideEntranceSwampB]
-top=72
-left=72
-pps=72
-image="img/exit-mob-b.png"
+top=36
+left=23
+image="../ffg/img/Entrance06.dds"
 traits=inside
