--- a/content/D2E/mor/tiles.ini
+++ b/content/D2E/mor/tiles.ini
@@ -75,10 +75,9 @@ image="../ffg/img/075B.dds"
 traits=inside
 
 [TileSide76A]
-top=72
-left=72
-pps=72
-image="img/076A.png"
+top=164
+left=46
+image="../ffg/img/076A.dds"
 traits=outside
 
 [TileSide76B]
