--- a/content/D2E/son/tiles.ini
+++ b/content/D2E/son/tiles.ini
@@ -25,10 +25,9 @@ image="../ffg/img/051B.dds"
 traits=blackrealm
 
 [TileSide52A]
-top=72
-left=72
-pps=72
-image="img/052A.png"
+top=302
+left=249.5
+image="../ffg/img/052A.dds"
 traits=outside
 
 [TileSide52B]
@@ -160,10 +159,9 @@ image="../ffg/img/062B.dds"
 traits=blackrealm
 
 [TileSide63A]
-top=72
-left=72
-pps=72
-image="img/063A.png"
+top=354.5
+left=249.5
+image="../ffg/img/063A.dds"
 traits=city
 
 [TileSide63B]
@@ -242,10 +240,9 @@ image="img/069A.png"
 traits=city
 
 [TileSide69B]
-top=72
-left=72
-pps=72
-image="img/069B.png"
+top=151
+left=151
+image="../ffg/img/069B.dds"
 traits=blackrealm
 
 [TileSideCapSoNA]
@@ -291,11 +288,10 @@ image="../ffg/img/Transition02.dds"
 traits=city outside transistion
 
 [TileSideTransitionSoNB]
-top=72
-left=72
-pps=72
-image="img/extension2.png"
-traits=blackrealm
+top=75.5
+left=23
+image="../ffg/img/Transition03.dds"
+traits=blackrealm inside
 
 [TileSideTransitionSoN2A]
 top=151
