--- a/content/D2E/tt/tiles.ini
+++ b/content/D2E/tt/tiles.ini
@@ -59,10 +59,9 @@ image="img/047A.png"
 traits=outside
 
 [TileSide47B]
-top=72
-left=72
-pps=72
-image="img/047B.png"
+top=151
+left=151
+image="../ffg/img/047B.dds"
 traits=inside
 
 [TileSide48A]
@@ -78,10 +77,9 @@ image="../ffg/img/048B.dds"
 traits=water inside
 
 [TileSide49A]
-top=72
-left=72
-pps=72
-image="img/049A.png"
+top=144.5
+left=144.5
+image="../ffg/img/049A.dds"
 traits=outside
 
 [TileSide49B]
@@ -91,3 +89,9 @@ image="../ffg/img/049B.dds"
 traits=inside water
 
 ; S2A
+
+[TileSideS2B]
+top=98.5
+left=46
+image="../ffg/img/S2B.dds"
+traits=inside
