--- a/content/D2E/tctr/tiles.ini
+++ b/content/D2E/tctr/tiles.ini
@@ -74,10 +74,9 @@ image="../ffg/img/093B.dds"
 traits=inside map
 
 [TileSide94A]
-top=72
-left=72
-pps=72
-image="img/094A.png"
+top=197
+left=394
+image="../ffg/img/094A.dds"
 traits=outside
 
 [TileSide94B]
