Adding low quality S2A tile.

--- a/content/D2E/tt/tiles.ini
+++ b/content/D2E/tt/tiles.ini
@@ -88,7 +88,10 @@ left=144.5
 image="../ffg/img/049B.dds"
 traits=inside water
 
-; S2A
+[TileSideS2A]
+pps=72
+image="img/S2A.png"
+traits=outside
 
 [TileSideS2B]
 top=98.5
