MoM: Added BtT investigators, monster structure.

--- a/content/MoM/base/activations.ini
+++ b/content/MoM/base/activations.ini
@@ -1,2 +1,2 @@
-[MonsterActivationZombie1]
-master="-"
+[MonsterActivationGeneric]
+master="Move 3 spaces towards the closest investigator.  Attack an investigator in this monster's space."
