--- a/content/MoM/base/monsters.ini
+++ b/content/MoM/base/monsters.ini
@@ -3,9 +3,11 @@
 ; name="Zombie"
 ; image to display
 image="../ffg/img/Monster_Zombie.dds"
-; Description text regarding surge/ability use
-info="-"
 ; This will probably need some work to standardise
 traits=undead small
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
+activation=Generic
+; Optional health modifier from number of players
+; health=0
+
