--- a/content/MoM/base/monsters.ini
+++ b/content/MoM/base/monsters.ini
@@ -1,13 +1,111 @@
-[MonsterZombie]
+[MonsterCultist]
 ; Optional name for display (if spaces or other formatting required)
 ; name="Zombie"
 ; image to display
-image="../ffg/img/Monster_Zombie.dds"
+image="../ffg/img/Monster_Cultist.dds"
 ; This will probably need some work to standardise
-traits=undead small
+traits=small
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
 activation=Generic
 ; Optional health modifier from number of players
 ; health=0
 
+[MonsterDeepOne]
+; Optional name for display (if spaces or other formatting required)
+name="Deep One"
+; image to display
+image="../ffg/img/Monster_Deep_One.dds"
+; optional priority, allows content packs to duplicate content and replace items
+; priority=0
+activation=Generic
+; Optional health modifier from number of players
+; health=0
+
+[MonsterDeepOneHybrid]
+; Optional name for display (if spaces or other formatting required)
+name="Deep One Hybrid"
+; image to display
+image="../ffg/img/Monster_Deep_One_Hybrid.dds"
+; optional priority, allows content packs to duplicate content and replace items
+; priority=0
+activation=Generic
+; Optional health modifier from number of players
+; health=0
+
+[MonsterGhost]
+; Optional name for display (if spaces or other formatting required)
+; name=""
+; image to display
+image="../ffg/img/Monster_Ghost.dds"
+; optional priority, allows content packs to duplicate content and replace items
+; priority=0
+activation=Generic
+; Optional health modifier from number of players
+; health=0
+
+[MonsterHuntingHorror]
+; Optional name for display (if spaces or other formatting required)
+name="Hunting Horror"
+; image to display
+image="../ffg/img/Monster_Hunting_Horror.dds"
+; optional priority, allows content packs to duplicate content and replace items
+; priority=0
+activation=Generic
+; Optional health modifier from number of players
+; health=0
+
+[MonsterRiot]
+; Optional name for display (if spaces or other formatting required)
+; name=""
+; image to display
+image="../ffg/img/Monster_Riot.dds"
+; optional priority, allows content packs to duplicate content and replace items
+; priority=0
+activation=Generic
+; Optional health modifier from number of players
+; health=0
+
+[MonsterStarSpawn]
+; Optional name for display (if spaces or other formatting required)
+name="Star Spawn"
+; image to display
+image="../ffg/img/Monster_Star_Spawn.dds"
+; optional priority, allows content packs to duplicate content and replace items
+; priority=0
+activation=Generic
+; Optional health modifier from number of players
+; health=0
+
+[MonsterChildOfDagon]
+; Optional name for display (if spaces or other formatting required)
+name="Child of Dagon"
+; image to display
+image="../ffg/img/Monster_Child_Of_Dagon.dds"
+; optional priority, allows content packs to duplicate content and replace items
+; priority=0
+activation=Generic
+; Optional health modifier from number of players
+; health=0
+
+[MonsterHybridLeader]
+; Optional name for display (if spaces or other formatting required)
+name="Hybrid Leader"
+; image to display
+image="../ffg/img/Monster_Hybrid_Leader.dds"
+; optional priority, allows content packs to duplicate content and replace items
+; priority=0
+activation=Generic
+; Optional health modifier from number of players
+; health=0
+
+[MonsterPriestOfDagon]
+; Optional name for display (if spaces or other formatting required)
+name="Priest of Dagon"
+; image to display
+image="../ffg/img/Monster_Priest_Of_Dagon.dds"
+; optional priority, allows content packs to duplicate content and replace items
+; priority=0
+activation=Generic
+; Optional health modifier from number of players
+; health=0
