Fixed up example quest to use monster in base game.

--- a/quests/MoM/Example/quest.ini
+++ b/quests/MoM/Example/quest.ini
@@ -31,16 +31,16 @@ xposition=5.25
 yposition=0
 text="A Door."
 confirmtext="Explore"
-event=MonsterZombie
+event=MonsterCultist
 type=TokenExplore
 
-[MonsterZombie]
+[MonsterCultist]
 xposition=1.75
 yposition=-1.75
-text="A Zombie!"
+text="A Cultist!"
 add=TileSecondAlley Tile2 Tile3 Tile4 Tile5
 remove=Token0
-monster=MonsterZombie
+monster=MonsterCultist
 
 [Tile2]
 xposition=7
