Fixing monster image paths.

--- a/content/MoM/base/monsters.ini
+++ b/content/MoM/base/monsters.ini
@@ -15,7 +15,7 @@ activation=Generic
 ; Optional name for display (if spaces or other formatting required)
 name="Deep One"
 ; image to display
-image="../ffg/img/Monster_Deep_One.dds"
+image="../ffg/img/Monster_DeepOne.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
 activation=Generic
@@ -26,7 +26,7 @@ activation=Generic
 ; Optional name for display (if spaces or other formatting required)
 name="Deep One Hybrid"
 ; image to display
-image="../ffg/img/Monster_Deep_One_Hybrid.dds"
+image="../ffg/img/Monster_DeepOneHybrid.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
 activation=Generic
@@ -37,7 +37,7 @@ activation=Generic
 ; Optional name for display (if spaces or other formatting required)
 ; name=""
 ; image to display
-image="../ffg/img/Monster_Ghost.dds"
+image="../ffg/img/MonsterGhost.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
 activation=Generic
@@ -48,7 +48,7 @@ activation=Generic
 ; Optional name for display (if spaces or other formatting required)
 name="Hunting Horror"
 ; image to display
-image="../ffg/img/Monster_Hunting_Horror.dds"
+image="../ffg/img/Monster_HuntingHorror.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
 activation=Generic
@@ -70,7 +70,7 @@ activation=Generic
 ; Optional name for display (if spaces or other formatting required)
 name="Star Spawn"
 ; image to display
-image="../ffg/img/Monster_Star_Spawn.dds"
+image="../ffg/img/Monster_StarSpawn.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
 activation=Generic
@@ -81,7 +81,7 @@ activation=Generic
 ; Optional name for display (if spaces or other formatting required)
 name="Child of Dagon"
 ; image to display
-image="../ffg/img/Monster_Child_Of_Dagon.dds"
+image="../ffg/img/Monster_ChildOfDagon.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
 activation=Generic
@@ -92,7 +92,7 @@ activation=Generic
 ; Optional name for display (if spaces or other formatting required)
 name="Hybrid Leader"
 ; image to display
-image="../ffg/img/Monster_Hybrid_Leader.dds"
+image="../ffg/img/Monster_HybridLeader.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
 activation=Generic
@@ -103,7 +103,7 @@ activation=Generic
 ; Optional name for display (if spaces or other formatting required)
 name="Priest of Dagon"
 ; image to display
-image="../ffg/img/Monster_Priest_Of_Dagon.dds"
+image="../ffg/img/Monster_PriestOfDagon.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
 activation=Generic
