--- a/content/MoM/mom1e/monsters.ini
+++ b/content/MoM/mom1e/monsters.ini
@@ -26,7 +26,7 @@ activation=Generic
 ; Optional name for display (if spaces or other formatting required)
 name="Hound of Tindalos"
 ; image to display
-image="../ffg/img/Monster_Hound_Of_Tindalos.dds"
+image="../ffg/img/Monster_HoundOfTindalos.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
 activation=Generic
@@ -48,7 +48,7 @@ activation=Generic
 ; Optional name for display (if spaces or other formatting required)
 name="Mi Go"
 ; image to display
-image="../ffg/img/Monster_Mi_Go.dds"
+image="../ffg/img/Monster_MiGo.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
 activation=Generic
@@ -81,7 +81,7 @@ activation=Generic
 ; Optional name for display (if spaces or other formatting required)
 name="Cult Leader"
 ; image to display
-image="../ffg/img/Monster_Cult_Leader.dds"
+image="../ffg/img/Monster_CultLeader.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
 activation=Generic
