Adding all expansion activations.

--- a/content/D2E/lor/monsters.ini
+++ b/content/D2E/lor/monsters.ini
@@ -25,7 +25,7 @@ traits=melee water dark small
 [MonsterArachyura]
 ; name=""
 image="../ffg/img/Monster_Arachyura.dds"
-info={ffg:INSTRUCTION_ARACHYURA}
+info={ffg:INSTRUCTION_ARACHYRUA}
 traits=melee wilderness cursed huge
 ; fixme unknown?
 ;activation=Range1 Range2 Range3
