--- a/content/D2E/boxed/son/activations.ini
+++ b/content/D2E/boxed/son/activations.ini
@@ -17,12 +17,6 @@ minion={ffg:RAT_SWARM_3_MINION_0}
 master={ffg:RAT_SWARM_3_MASTER_0}
 
 ; fixme minion first?
-[MonsterActivationRatSwarm4]
-ability={ffg:EFFECT_RAT_SWARM_4}
-minion={ffg:RAT_SWARM_4_MINION_0}
-master={ffg:RAT_SWARM_4_MASTER_0}
-
-; fixme minion first?
 [MonsterActivationChangeling1]
 ability={ffg:EFFECT_CHANGELING_1}
 minion={ffg:CHANGELING_1_MINION_0}
@@ -33,12 +27,6 @@ master={ffg:CHANGELING_1_MASTER_0}
 ability={ffg:EFFECT_CHANGELING_2}
 minion={ffg:CHANGELING_2_MINION_0}
 master={ffg:CHANGELING_2_MASTER_0}
-
-; fixme minion first?
-[MonsterActivationChangeling3]
-ability={ffg:EFFECT_CHANGELING_3}
-minion={ffg:CHANGELING_3_MINION_0}
-master={ffg:CHANGELING_3_MASTER_0}
 
 ; fixme minion first?
 [MonsterActivationIronbound1]
@@ -77,7 +65,13 @@ minion={ffg:YNFERNAEL_HULK_3_MINION_0}
 master={ffg:YNFERNAEL_HULK_3_MASTER_0}
 
 ; fixme minion first?
-[MonsterActivationShamblingColossus3]
+[MonsterActivationShamblingColossusSoN]
 ability={ffg:EFFECT_SHAMBLING_COLOSSUS_NEREKHALL}
 minion={ffg:SHAMBLING_COLOSSUS_NEREKHALL_MINION_0}
 master={ffg:SHAMBLING_COLOSSUS_NEREKHALL_MASTER_0}
+
+; fixme minion first?
+[MonsterActivationVolucrixReaver4]
+ability={ffg:EFFECT_VOLUCRIX_REAVER_4}
+minion={ffg:VOLUCRIX_REAVER_4_MINION_0}
+master={ffg:VOLUCRIX_REAVER_4_MASTER_0}
