--- a/content/D2E/boxed/lor/activations.ini
+++ b/content/D2E/boxed/lor/activations.ini
@@ -35,12 +35,6 @@ minion={ffg:VOLUCRIX_REAVER_3_MINION_0}
 master={ffg:VOLUCRIX_REAVER_3_MASTER_0}
 
 ; fixme minion first?
-[MonsterActivationVolucrixReaver4]
-ability={ffg:EFFECT_VOLUCRIX_REAVER_4}
-minion={ffg:VOLUCRIX_REAVER_4_MINION_0}
-master={ffg:VOLUCRIX_REAVER_4_MASTER_0}
-
-; fixme minion first?
 [MonsterActivationCarrionDrake1]
 ability={ffg:EFFECT_CARRION_DRAKE_1}
 minion={ffg:CARRION_DRAKE_1_MINION_0}
@@ -75,3 +69,9 @@ master={ffg:ARACHYURA_2_MASTER_0}
 ability={ffg:EFFECT_ARACHYURA_3}
 minion={ffg:ARACHYURA_3_MINION_0}
 master={ffg:ARACHYURA_3_MASTER_0}
+
+; fixme minion first?
+[MonsterActivationChangeling3]
+ability={ffg:EFFECT_CHANGELING_3}
+minion={ffg:CHANGELING_3_MINION_0}
+master={ffg:CHANGELING_3_MASTER_0}
