--- a/content/D2E/boxed/tctr/activations.ini
+++ b/content/D2E/boxed/tctr/activations.ini
@@ -57,3 +57,21 @@ master={ffg:SHAMBLING_COLOSSUS_2_MASTER_0}
 ability={ffg:EFFECT_SHAMBLING_COLOSSUS_3}
 minion={ffg:SHAMBLING_COLOSSUS_3_MINION_0}
 master={ffg:SHAMBLING_COLOSSUS_3_MASTER_0}
+
+; fixme minion first?
+[MonsterActivationFireImp4]
+ability={ffg:EFFECT_FIRE_IMPS_4}
+minion={ffg:FIRE_IMPS_4_MINION_0}
+master={ffg:FIRE_IMPS_4_MASTER_0}
+
+; fixme minion first?
+[MonsterActivationRatSwarm4]
+ability={ffg:EFFECT_RAT_SWARM_4}
+minion={ffg:RAT_SWARM_4_MINION_0}
+master={ffg:RAT_SWARM_4_MASTER_0}
+
+; fixme minion first?
+[MonsterActivationZombie6]
+ability={ffg:EFFECT_ZOMBIE_6}
+minion={ffg:ZOMBIE_6_MINION_0}
+master={ffg:ZOMBIE_6_MASTER_0}
