--- a/content/D2E/boxed/son/activations.ini
+++ b/content/D2E/boxed/son/activations.ini
@@ -75,3 +75,9 @@ master={ffg:SHAMBLING_COLOSSUS_NEREKHALL_MASTER_0}
 ability={ffg:EFFECT_VOLUCRIX_REAVER_4}
 minion={ffg:VOLUCRIX_REAVER_4_MINION_0}
 master={ffg:VOLUCRIX_REAVER_4_MASTER_0}
+
+; fixme minion first?
+[MonsterActivationSkeletonArcher4]
+ability={ffg:EFFECT_SKELETON_ARCHER_4}
+minion={ffg:SKELETON_ARCHER_4_MINION_0}
+master={ffg:SKELETON_ARCHER_4_MASTER_0}
