Added all content from D2E:H&M:ToC.

--- a/content/D2E/h&m/toc/monsters.ini
+++ b/content/D2E/h&m/toc/monsters.ini
@@ -5,3 +5,19 @@ info={ffg:INSTRUCTION_SKELETON_ARCHER}
 traits=ranged cursed civilized small
 ; fixme unknown?
 ;activation=Range1 Range2 Range3
+
+[MonsterCrowHag]
+name="Crow Hag"
+image="../ffg/img/Monster_CrowHag.dds"
+info={ffg:INSTRUCTION_CROW_HAG}
+traits=ranged dark civilized small
+; fixme unknown?
+;activation=Range1 Range2 Range3
+
+[MonsterDemonLord]
+name="Demon Lord"
+image="../ffg/img/Monster_DemonLord.dds"
+info={ffg:INSTRUCTION_DEMON_LORD}
+traits=ranged cursed hot huge
+; fixme unknown?
+;activation=Range1 Range2 Range3
