--- a/content/D2E/boxed/lotw/activations.ini
+++ b/content/D2E/boxed/lotw/activations.ini
@@ -40,3 +40,9 @@ master={ffg:HYBRID_SENTINEL_2_MASTER_0}
 ability={ffg:EFFECT_HYBRID_SENTINEL_3}
 minion={ffg:HYBRID_SENTINEL_3_MINION_0}
 master={ffg:HYBRID_SENTINEL_3_MASTER_0}
+
+; fixme minion first?
+[MonsterActivationDemonLord4]
+ability={ffg:EFFECT_DEMON_LORD_4}
+minion={ffg:DEMON_LORD_4_MINION_0}
+master={ffg:DEMON_LORD_4_MASTER_0}
