--- a/content/D2E/h&m/toc/heros.ini
+++ b/content/D2E/h&m/toc/heros.ini
@@ -3,3 +3,21 @@
 image="../ffg/img/Hero_Krutzbeck.dds"
 archetype=warrior
 traits=male dwarf
+
+[HeroJonasTheKind]
+name="Jonas the Kind"
+image="../ffg/img/Hero_JonasTheKind.dds"
+archetype=healer
+traits=male
+
+[HeroGreyKey]
+name="Grey Key"
+image="../ffg/img/Hero_GreyKey.dds"
+archetype=scout
+traits=male
+
+[HeroZyla]
+; name=""
+image="../ffg/img/Hero_Zyla.dds"
+archetype=mage
+traits=female
