--- a/content/D2E/boxed/lotw/activations.ini
+++ b/content/D2E/boxed/lotw/activations.ini
@@ -46,3 +46,9 @@ master={ffg:HYBRID_SENTINEL_3_MASTER_0}
 ability={ffg:EFFECT_DEMON_LORD_4}
 minion={ffg:DEMON_LORD_4_MINION_0}
 master={ffg:DEMON_LORD_4_MASTER_0}
+
+; fixme minion first?
+[MonsterActivationLavaBeetle4]
+ability={ffg:EFFECT_LAVA_BEETLE_4}
+minion={ffg:LAVA_BEETLE_4_MINION_0}
+master={ffg:LAVA_BEETLE_4_MASTER_0}
