Adding Guardians of Deephall.

--- a/content/D2E/boxed/mor/activations.ini
+++ b/content/D2E/boxed/mor/activations.ini
@@ -39,3 +39,9 @@ master={ffg:WRAITH_3_MASTER_0}
 ability={ffg:EFFECT_SHAMBLING_COLOSSUS_RAVENS}
 minion={ffg:SHAMBLING_COLOSSUS_RAVENS_MINION_0}
 master={ffg:SHAMBLING_COLOSSUS_RAVENS_MASTER_0}
+
+; fixme minion first?
+[MonsterActivationDarkPriest4]
+ability={ffg:EFFECT_DARK_PRIEST_4}
+minion={ffg:DARK_PRIEST_4_MINION_0}
+master={ffg:DARK_PRIEST_4_MASTER_0}
