--- a/content/D2E/h&m/cotf/content_pack.ini
+++ b/content/D2E/h&m/cotf/content_pack.ini
@@ -1,6 +1,6 @@
 [ContentPack]
 name=Crusade of the Forgotten
-description=rusade of the Forgotten Hero and Monster Collection for Descent: Journeys in the Dark Second Edition
+description=Crusade of the Forgotten Hero and Monster Collection for Descent: Journeys in the Dark Second Edition
 image="../ffg/img/DJ28_CrusadeOfTheForgotten.dds"
 id=CotF
 
