Correcting image paths for content.

--- a/content/D2E/boxed/lotw/content_pack.ini
+++ b/content/D2E/boxed/lotw/content_pack.ini
@@ -1,7 +1,7 @@
 [ContentPack]
 name=Lair of the Wyrm
 description=Lair of the Wyrm expansion for Descent: Journeys in the Dark Second Edition
-image="../ffg/img/DJ03_LairOfTheWyrm.dds"
+image="../../ffg/img/DJ03_LairOfTheWyrm.dds"
 id=LotW
 
 [ContentPackData]
