--- a/content/D2E/boxed/lotw/heros.ini
+++ b/content/D2E/boxed/lotw/heros.ini
@@ -1,11 +1,11 @@
 [HeroReynharttheWorthy]
 name="Reynhart the Worthy"
-image="../ffg/img/Hero_ReynhartTheWorthy.dds"
+image="../../ffg/img/Hero_ReynhartTheWorthy.dds"
 archetype=warrior
 traits=male
 
 [HeroHighMageQuellen]
 name="High Mage Quellen"
-image="../ffg/img/Hero_HighMageQuellen.dds"
+image="../../ffg/img/Hero_HighMageQuellen.dds"
 archetype=mage
 traits=male
