--- a/content/D2E/boxed/lotw/monsters.ini
+++ b/content/D2E/boxed/lotw/monsters.ini
@@ -1,6 +1,6 @@
 [MonsterFireImp]
 name="Fire Imp"
-image="../ffg/img/Monster_FireImps.dds"
+image="../../ffg/img/Monster_FireImps.dds"
 info={ffg:INSTRUCTION_FIRE_IMP}
 traits=ranged hot cursed small
 ; fixme unknown?
@@ -8,7 +8,7 @@ traits=ranged hot cursed small
 
 [MonsterHybridSentinel]
 name="Hybrid Sentinel"
-image="../ffg/img/Monster_HybridSentinel.dds"
+image="../../ffg/img/Monster_HybridSentinel.dds"
 info={ffg:INSTRUCTION_HYBRID_SENTINEL}
 traits=melee mountain cave small
 ; fixme unknown?
