--- a/content/D2E/boxed/lotw/tiles.ini
+++ b/content/D2E/boxed/lotw/tiles.ini
@@ -3,13 +3,13 @@
 [TileSide31A]
 top=197
 left=197
-image="../ffg/img/031A.dds"
+image="../../ffg/img/031A.dds"
 traits=rubble outside
 
 [TileSide31B]
 top=197
 left=197
-image="../ffg/img/031B.dds"
+image="../../ffg/img/031B.dds"
 traits=treasure inside
 
 [TileSide32A]
@@ -22,13 +22,13 @@ traits=outside
 [TileSide32B]
 top=46
 left=46
-image="../ffg/img/032B.dds"
+image="../../ffg/img/032B.dds"
 traits=treasure inside
 
 [TileSide33A]
 top=151
 left=46
-image="../ffg/img/033A.dds"
+image="../../ffg/img/033A.dds"
 traits=outside water
 
 [TileSide33B]
@@ -48,19 +48,19 @@ traits=outside
 [TileSide34B]
 top=197
 left=354.5
-image="../ffg/img/034B.dds"
+image="../../ffg/img/034B.dds"
 traits=stairs inside
 
 [TileSide35A]
 top=249.5
 left=262.5
-image="../ffg/img/035A.dds"
+image="../../ffg/img/035A.dds"
 traits=outside
 
 [TileSide35B]
 top=249.5
 left=236.5
-image="../ffg/img/035B.dds"
+image="../../ffg/img/035B.dds"
 traits=lava inside
 
 [TileSideS1A]
