--- a/content/D2E/boxed/mor/heros.ini
+++ b/content/D2E/boxed/mor/heros.ini
@@ -1,11 +1,11 @@
 [HeroAlysRaine]
 name="Alys Raine"
-image="../ffg/img/Hero_AlysRaine.dds"
+image="../../ffg/img/Hero_AlysRaine.dds"
 archetype=warrior
 traits=female
 
 [HeroThaidenMistpeak]
 name="Thaiden Mistpeak"
-image="../ffg/img/Hero_ThaidenMistpeak.dds"
+image="../../ffg/img/Hero_ThaidenMistpeak.dds"
 archetype=scout
 traits=male
