--- a/content/D2E/boxed/mor/monsters.ini
+++ b/content/D2E/boxed/mor/monsters.ini
@@ -1,6 +1,6 @@
 [MonsterBandit]
 ; name=""
-image="../ffg/img/Monster_Bandit.dds"
+image="../../ffg/img/Monster_Bandit.dds"
 info={ffg:INSTRUCTION_BANDIT}
 traits=ranged wilderness building small
 ; fixme unknown?
@@ -8,7 +8,7 @@ traits=ranged wilderness building small
 
 [MonsterWraith]
 ; name=""
-image="../ffg/img/Monster_Wraith.dds"
+image="../../ffg/img/Monster_Wraith.dds"
 info={ffg:INSTRUCTION_WRAITH}
 traits=ranged civilized cursed small
 ; fixme unknown?
