--- a/content/D2E/boxed/son/monsters.ini
+++ b/content/D2E/boxed/son/monsters.ini
@@ -1,6 +1,6 @@
 [MonsterRatSwarm]
 name="Rat Swarm"
-image="../ffg/img/Monster_RatSwarm.dds"
+image="../../ffg/img/Monster_RatSwarm.dds"
 info={ffg:INSTRUCTION_RAT_SWARM}
 traits=melee building dark medium
 ; fixme unknown?
@@ -8,7 +8,7 @@ traits=melee building dark medium
 
 [MonsterChangeling]
 ; name=""
-image="../ffg/img/Monster_Changeling.dds"
+image="../../ffg/img/Monster_Changeling.dds"
 info={ffg:INSTRUCTION_CHANGELING}
 traits=melee civilized cursed small
 ; fixme unknown?
@@ -16,7 +16,7 @@ traits=melee civilized cursed small
 
 [MonsterIronbound]
 ; name=""
-image="../ffg/img/Monster_Ironbound.dds"
+image="../../ffg/img/Monster_Ironbound.dds"
 info={ffg:INSTRUCTION_IRONBOUND}
 traits=melee civilized building small
 ; fixme unknown?
@@ -24,7 +24,7 @@ traits=melee civilized building small
 
 [MonsterYnfernaelHulk]
 name="Ynfernael Hulk"
-image="../ffg/img/Monster_YnfernaelHulk.dds"
+image="../../ffg/img/Monster_YnfernaelHulk.dds"
 info={ffg:INSTRUCTION_YNFERNAEL_HULK}
 traits=melee cursed hot huge
 ; fixme unknown?
