--- a/content/D2E/boxed/tctr/monsters.ini
+++ b/content/D2E/boxed/tctr/monsters.ini
@@ -1,6 +1,6 @@
 [MonsterMarrowPriest]
 name="Marrow Priest"
-image="../ffg/img/Monster_MarrowPriest.dds"
+image="../../ffg/img/Monster_MarrowPriest.dds"
 info={ffg:INSTRUCTION_MARROW_PRIEST}
 traits=ranged dark building small
 ; fixme unknown?
@@ -8,7 +8,7 @@ traits=ranged dark building small
 
 [MonsterTheDispossessed]
 name="The Dispossessed"
-image="../ffg/img/Monster_Dispossessed.dds"
+image="../../ffg/img/Monster_Dispossessed.dds"
 info={ffg:INSTRUCTION_DISPOSSESSED}
 traits=melee cursed civilized small
 ; fixme unknown?
@@ -16,7 +16,7 @@ traits=melee cursed civilized small
 
 [MonsterShamblingColossus]
 name="Shambling Colossus"
-image="../ffg/img/Monster_ShamblingColossus.dds"
+image="../../ffg/img/Monster_ShamblingColossus.dds"
 info={ffg:INSTRUCTION_SHAMBLING_COLOSSUS}
 traits=melee cursed wilderness medium
 ; fixme unknown?
