--- a/content/D2E/boxed/tt/monsters.ini
+++ b/content/D2E/boxed/tt/monsters.ini
@@ -1,6 +1,6 @@
 [MonsterHarpy]
 ; name=""
-image="../ffg/img/Monster_Harpy.dds"
+image="../../ffg/img/Monster_Harpy.dds"
 info={ffg:INSTRUCTION_HARPY}
 traits=melee wilderness mountain small
 ; fixme unknown?
@@ -8,7 +8,7 @@ traits=melee wilderness mountain small
 
 [MonsterPlagueWorm]
 name="Plague Worm"
-image="../ffg/img/Monster_PlagueWorm.dds"
+image="../../ffg/img/Monster_PlagueWorm.dds"
 info={ffg:INSTRUCTION_PLAGUE_WORM}
 traits=melee water cave medium
 ; fixme unknown?
