--- a/content/D2E/h&m/cotf/monsters.ini
+++ b/content/D2E/h&m/cotf/monsters.ini
@@ -1,6 +1,6 @@
 [MonsterGolem]
 ; name=""
-image="../ffg/img/Monster_Golem.dds"
+image="../../ffg/img/Monster_Golem.dds"
 info={ffg:INSTRUCTION_GOLEM}
 traits=melee mountain building huge
 ; fixme unknown?
@@ -8,7 +8,7 @@ traits=melee mountain building huge
 
 [MonsterMedusa]
 ; name=""
-image="../ffg/img/Monster_Medusa.dds"
+image="../../ffg/img/Monster_Medusa.dds"
 info={ffg:INSTRUCTION_MEDUSA}
 traits=ranged building cursed small
 ; fixme unknown?
@@ -16,7 +16,7 @@ traits=ranged building cursed small
 
 [MonsterSorcerer]
 ; name=""
-image="../ffg/img/Monster_Sorcerer.dds"
+image="../../ffg/img/Monster_Sorcerer.dds"
 info={ffg:INSTRUCTION_SORCERER}
 traits=ranged civilised building small
 ; fixme unknown?
