--- a/content/D2E/h&m/god/monsters.ini
+++ b/content/D2E/h&m/god/monsters.ini
@@ -1,6 +1,6 @@
 [MonsterCryptDragon]
 name="Crypt Dragon"
-image="../ffg/img/Monster_Crypt_Dragon.dds"
+image="../../ffg/img/Monster_Crypt_Dragon.dds"
 info={ffg:INSTRUCTION_CRYPT_DRAGON}
 traits=ranged cursed dark massive
 ; fixme unknown?
@@ -8,7 +8,7 @@ traits=ranged cursed dark massive
 
 [MonsterDarkPriest]
 name="Dark Priest"
-image="../ffg/img/Monster_Dark_Priest.dds"
+image="../../ffg/img/Monster_Dark_Priest.dds"
 info={ffg:INSTRUCTION_DARK_PRIEST}
 traits=ranged civilised cursed small
 ; fixme unknown?
@@ -16,7 +16,7 @@ traits=ranged civilised cursed small
 
 [MonsterWendigo]
 ; name=""
-image="../ffg/img/Monster_Wendigo.dds"
+image="../../ffg/img/Monster_Wendigo.dds"
 info={ffg:INSTRUCTION_WENDIGO}
 traits=melee cold cave huge
 ; fixme unknown?
