--- a/content/D2E/h&m/ooto/monsters.ini
+++ b/content/D2E/h&m/ooto/monsters.ini
@@ -1,6 +1,6 @@
 [MonsterRazorwing]
 ; name=""
-image="../ffg/img/Monster_Razorwing.dds"
+image="../../ffg/img/Monster_Razorwing.dds"
 info={ffg:INSTRUCTION_RAZORWING}
 traits=melee wilderness cave small
 ; fixme unknown?
@@ -8,7 +8,7 @@ traits=melee wilderness cave small
 
 [MonsterBeastmen]
 ; name=""
-image="../ffg/img/Monster_Beastman.dds"
+image="../../ffg/img/Monster_Beastman.dds"
 info={ffg:INSTRUCTION_BEASTMAN}
 traits=melee wilderness mountain small
 ; fixme unknown?
@@ -16,7 +16,7 @@ traits=melee wilderness mountain small
 
 [MonsterBaneSpider]
 ; name=""
-image="../ffg/img/Monster_BaneSpider.dds"
+image="../../ffg/img/Monster_BaneSpider.dds"
 info={ffg:INSTRUCTION_BANE_SPIDER}
 traits=ranged dark cave huge
 ; fixme unknown?
