--- a/content/D2E/h&m/toc/monsters.ini
+++ b/content/D2E/h&m/toc/monsters.ini
@@ -1,6 +1,6 @@
 [MonsterSkeletonArcher]
 name="Skeleton Archer"
-image="../ffg/img/Monster_SkeletonArcher.dds"
+image="../../ffg/img/Monster_SkeletonArcher.dds"
 info={ffg:INSTRUCTION_SKELETON_ARCHER}
 traits=ranged cursed civilized small
 ; fixme unknown?
@@ -8,7 +8,7 @@ traits=ranged cursed civilized small
 
 [MonsterCrowHag]
 name="Crow Hag"
-image="../ffg/img/Monster_CrowHag.dds"
+image="../../ffg/img/Monster_CrowHag.dds"
 info={ffg:INSTRUCTION_CROW_HAG}
 traits=ranged dark civilized small
 ; fixme unknown?
@@ -16,7 +16,7 @@ traits=ranged dark civilized small
 
 [MonsterDemonLord]
 name="Demon Lord"
-image="../ffg/img/Monster_DemonLord.dds"
+image="../../ffg/img/Monster_DemonLord.dds"
 info={ffg:INSTRUCTION_DEMON_LORD}
 traits=ranged cursed hot huge
 ; fixme unknown?
