--- a/content/D2E/boxed/lor/content_pack.ini
+++ b/content/D2E/boxed/lor/content_pack.ini
@@ -1,7 +1,7 @@
 [ContentPack]
 name=Labyrinth of Ruin
 description=Labyrinth of Ruin expansion for Descent: Journeys in the Dark Second Edition
-image="../ffg/img/DJ04_LabyrinthOfRuin.dds"
+image="../../ffg/img/DJ04_LabyrinthOfRuin.dds"
 id=LoR
 
 [ContentPackData]
