--- a/content/D2E/boxed/lor/monsters.ini
+++ b/content/D2E/boxed/lor/monsters.ini
@@ -1,6 +1,6 @@
 [MonsterGoblinWitcher]
 name="Goblin Witcher"
-image="../ffg/img/Monster_GoblinWitcher.dds"
+image="../../ffg/img/Monster_GoblinWitcher.dds"
 info={ffg:INSTRUCTION_GOBLIN_WITCHER}
 traits=ranged building cursed small
 ; fixme unknown?
@@ -8,7 +8,7 @@ traits=ranged building cursed small
 
 [MonsterVolucrixReaver]
 name="Volucrix Reaver"
-image="../ffg/img/Monster_VolucrixReaver.dds"
+image="../../ffg/img/Monster_VolucrixReaver.dds"
 info={ffg:INSTRUCTION_VOLUCRIX_REAVER}
 traits=melee building mountain small
 ; fixme unknown?
@@ -16,7 +16,7 @@ traits=melee building mountain small
 
 [MonsterCarrionDrake]
 name="Carrion Drake"
-image="../ffg/img/Monster_CarrionDrake.dds"
+image="../../ffg/img/Monster_CarrionDrake.dds"
 info={ffg:INSTRUCTION_CARRION_DRAKE}
 traits=melee water dark small
 ; fixme unknown?
@@ -24,7 +24,7 @@ traits=melee water dark small
 
 [MonsterArachyura]
 ; name=""
-image="../ffg/img/Monster_Arachyura.dds"
+image="../../ffg/img/Monster_Arachyura.dds"
 info={ffg:INSTRUCTION_ARACHYRUA}
 traits=melee wilderness cursed huge
 ; fixme unknown?
