--- a/content/D2E/boxed/mob/content_pack.ini
+++ b/content/D2E/boxed/mob/content_pack.ini
@@ -1,7 +1,7 @@
 [ContentPack]
 name=Mists of Bilehall
 description=Mists of Bilehall expansion for Descent: Journeys in the Dark Second Edition
-image="../ffg/img/DJ40_MistsOfBilehall.dds"
+image="../../ffg/img/DJ40_MistsOfBilehall.dds"
 id=MoB
 
 [ContentPackData]
