--- a/content/D2E/boxed/mob/monsters.ini
+++ b/content/D2E/boxed/mob/monsters.ini
@@ -1,6 +1,6 @@
 [MonsterBoneHorror]
 name="Bone Horror"
-image="../ffg/img/Monster_BoneHorror.dds"
+image="../../ffg/img/Monster_BoneHorror.dds"
 info={ffg:INSTRUCTION_BONE_HORROR}
 traits=melee cursed cave small
 ; fixme unknown?
@@ -8,7 +8,7 @@ traits=melee cursed cave small
 
 [MonsterReanimate]
 ; name=""
-image="../ffg/img/Monster_Reanimate.dds"
+image="../../ffg/img/Monster_Reanimate.dds"
 info={ffg:INSTRUCTION_REANIMATE}
 traits=melee cursed civilized small
 ; fixme unknown?
@@ -16,7 +16,7 @@ traits=melee cursed civilized small
 
 [MonsterBroodwalker]
 ; name=""
-image="../ffg/img/Monster_Broodwalker.dds"
+image="../../ffg/img/Monster_Broodwalker.dds"
 info={ffg:INSTRUCTION_BROODWALKER}
 traits=melee dark building small
 ; fixme unknown?
