--- a/content/D2E/boxed/mor/tiles.ini
+++ b/content/D2E/boxed/mor/tiles.ini
@@ -3,7 +3,7 @@
 [TileSide70A]
 top=197
 left=197
-image="../ffg/img/070A.dds"
+image="../../ffg/img/070A.dds"
 traits=outside inside transition
 
 [TileSide70B]
@@ -16,49 +16,49 @@ traits=inside
 [TileSide71A]
 top=197
 left=197
-image="../ffg/img/071A.dds"
+image="../../ffg/img/071A.dds"
 traits=outside tents
 
 [TileSide71B]
 top=197
 left=197
-image="../ffg/img/071B.dds"
+image="../../ffg/img/071B.dds"
 traits=inside
 
 [TileSide72A]
 top=302
 left=197
-image="../ffg/img/072A.dds"
+image="../../ffg/img/072A.dds"
 traits=outside stables
 
 [TileSide72B]
 top=302
 left=197
-image="../ffg/img/072B.dds"
+image="../../ffg/img/072B.dds"
 traits=inside hall
 
 [TileSide73A]
 top=354.5
 left=197
-image="../ffg/img/073A.dds"
+image="../../ffg/img/073A.dds"
 traits=outside
 
 [TileSide73B]
 top=354.5
 left=197
-image="../ffg/img/073B.dds"
+image="../../ffg/img/073B.dds"
 traits=inside
 
 [TileSide74A]
 top=263
 left=289
-image="../ffg/img/074A.dds"
+image="../../ffg/img/074A.dds"
 traits=inside outside transition bedroom
 
 [TileSide74B]
 top=263
 left=315
-image="../ffg/img/074B.dds"
+image="../../ffg/img/074B.dds"
 traits=inside outside transition
 
 [TileSide75A]
@@ -71,19 +71,19 @@ traits=outside pit
 [TileSide75B]
 top=46
 left=46
-image="../ffg/img/075B.dds"
+image="../../ffg/img/075B.dds"
 traits=inside
 
 [TileSide76A]
 top=164
 left=46
-image="../ffg/img/076A.dds"
+image="../../ffg/img/076A.dds"
 traits=outside
 
 [TileSide76B]
 top=164
 left=46
-image="../ffg/img/076B.dds"
+image="../../ffg/img/076B.dds"
 traits=inside
 
 [TileSide77A]
@@ -96,5 +96,5 @@ traits=outside
 [TileSide77B]
 top=164
 left=164
-image="../ffg/img/077B.dds"
+image="../../ffg/img/077B.dds"
 traits=inside
