--- a/content/D2E/boxed/son/content_pack.ini
+++ b/content/D2E/boxed/son/content_pack.ini
@@ -1,7 +1,7 @@
 [ContentPack]
 name=Shadow of Nerekhall
 description=Shadow of Nerekhall expansion for Descent: Journeys in the Dark Second Edition
-image="../ffg/img/DJ07_ShadowOfNerekhall.dds"
+image="../../ffg/img/DJ07_ShadowOfNerekhall.dds"
 id=SoN
 
 [ContentPackData]
