--- a/content/D2E/boxed/son/tiles.ini
+++ b/content/D2E/boxed/son/tiles.ini
@@ -3,103 +3,103 @@
 [TileSide50A]
 top=184
 left=197
-image="../ffg/img/050A.dds"
+image="../../ffg/img/050A.dds"
 traits=city fountain
 
 [TileSide50B]
 top=184
 left=197
-image="../ffg/img/050B.dds"
+image="../../ffg/img/050B.dds"
 traits=blackrealm altar
 
 [TileSide51A]
 top=289
 left=197
-image="../ffg/img/051A.dds"
+image="../../ffg/img/051A.dds"
 traits=city beds
 
 [TileSide51B]
 top=289
 left=197
-image="../ffg/img/051B.dds"
+image="../../ffg/img/051B.dds"
 traits=blackrealm
 
 [TileSide52A]
 top=302
 left=249.5
-image="../ffg/img/052A.dds"
+image="../../ffg/img/052A.dds"
 traits=outside
 
 [TileSide52B]
 top=302
 left=249.5
-image="../ffg/img/052B.dds"
+image="../../ffg/img/052B.dds"
 traits=inside water
 
 [TileSide53A]
 top=59
 left=59
-image="../ffg/img/053A.dds"
+image="../../ffg/img/053A.dds"
 traits=outside
 
 [TileSide53B]
 top=59
 left=33
-image="../ffg/img/053B.dds"
+image="../../ffg/img/053B.dds"
 traits=inside water
 
 [TileSide54A]
 top=59
 left=59
-image="../ffg/img/054A.dds"
+image="../../ffg/img/054A.dds"
 traits=city study
 
 [TileSide54B]
 top=59
 left=33
-image="../ffg/img/054B.dds"
+image="../../ffg/img/054B.dds"
 traits=blackrealm pit
 
 [TileSide55A]
 top=302
 left=197
-image="../ffg/img/055A.dds"
+image="../../ffg/img/055A.dds"
 traits=city prison
 
 [TileSide55B]
 top=302
 left=197
-image="../ffg/img/055B.dds"
+image="../../ffg/img/055B.dds"
 traits=blackrealm stairs
 
 [TileSide56A]
 top=302
 left=184
-image="../ffg/img/056A.dds"
+image="../../ffg/img/056A.dds"
 traits=city library
 
 [TileSide56B]
 top=302
 left=210
-image="../ffg/img/056B.dds"
+image="../../ffg/img/056B.dds"
 traits=blackrealm plinth
 
 [TileSide57A]
 top=210
 left=302
-image="../ffg/img/057A.dds"
+image="../../ffg/img/057A.dds"
 traits=city
 
 [TileSide57B]
 top=210
 left=302
-image="../ffg/img/057B.dds"
+image="../../ffg/img/057B.dds"
 traits=blackrealm
 
 [TileSide58A]
 top=341.5
 left=197
-image="../ffg/img/058A.dds"
+image="../../ffg/img/058A.dds"
 traits=city water
 
 [TileSide58B]
@@ -112,31 +112,31 @@ traits=blackrealm
 [TileSide59A]
 top=262.5
 left=249.5
-image="../ffg/img/059A.dds"
+image="../../ffg/img/059A.dds"
 traits=blackrealm city transistion
 
 [TileSide59B]
 top=262.5
 left=249.5
-image="../ffg/img/059B.dds"
+image="../../ffg/img/059B.dds"
 traits=blackrealm altar city transistion
 
 [TileSide60A]
 top=197
 left=236.5
-image="../ffg/img/060A.dds"
+image="../../ffg/img/060A.dds"
 traits=city tavern
 
 [TileSide60B]
 top=197
 left=232.5
-image="../ffg/img/060B.dds"
+image="../../ffg/img/060B.dds"
 traits=blackrealm
 
 [TileSide61A]
 top=59
 left=59
-image="../ffg/img/061A.dds"
+image="../../ffg/img/061A.dds"
 traits=city water
 
 [TileSide61B]
@@ -149,25 +149,25 @@ traits=blackrealm
 [TileSide62A]
 top=111.5
 left=98.5
-image="../ffg/img/062A.dds"
+image="../../ffg/img/062A.dds"
 traits=city
 
 [TileSide62B]
 top=111.5
 left=98.5
-image="../ffg/img/062B.dds"
+image="../../ffg/img/062B.dds"
 traits=blackrealm
 
 [TileSide63A]
 top=354.5
 left=249.5
-image="../ffg/img/063A.dds"
+image="../../ffg/img/063A.dds"
 traits=city
 
 [TileSide63B]
 top=354.5
 left=249.5
-image="../ffg/img/063B.dds"
+image="../../ffg/img/063B.dds"
 traits=blackrealm
 
 [TileSide64A]
@@ -187,49 +187,49 @@ traits=blackrealm
 [TileSide65A]
 top=164
 left=46
-image="../ffg/img/065A.dds"
+image="../../ffg/img/065A.dds"
 traits=city
 
 [TileSide65B]
 top=164
 left=46
-image="../ffg/img/065B.dds"
+image="../../ffg/img/065B.dds"
 traits=blackrealm
 
 [TileSide66A]
 top=164
 left=46
-image="../ffg/img/066A.dds"
+image="../../ffg/img/066A.dds"
 traits=city
 
 [TileSide66B]
 top=164
 left=46
-image="../ffg/img/066B.dds"
+image="../../ffg/img/066B.dds"
 traits=blackrealm
 
 [TileSide67A]
 top=164
 left=151
-image="../ffg/img/067A.dds"
+image="../../ffg/img/067A.dds"
 traits=city
 
 [TileSide67B]
 top=164
 left=151
-image="../ffg/img/067B.dds"
+image="../../ffg/img/067B.dds"
 traits=blackrealm
 
 [TileSide68A]
 top=164
 left=138
-image="../ffg/img/068A.dds"
+image="../../ffg/img/068A.dds"
 traits=city
 
 [TileSide68B]
 top=164
 left=164
-image="../ffg/img/068B.dds"
+image="../../ffg/img/068B.dds"
 traits=blackrealm
 
 [TileSide69A]
@@ -242,61 +242,61 @@ traits=city
 [TileSide69B]
 top=151
 left=151
-image="../ffg/img/069B.dds"
+image="../../ffg/img/069B.dds"
 traits=blackrealm
 
 [TileSideCapSoNA]
 top=90
 left=23
-image="../ffg/img/Cap03.dds"
+image="../../ffg/img/Cap03.dds"
 traits=city
 
 [TileSideCapSoNB]
 top=90
 left=23
-image="../ffg/img/Cap04.dds"
+image="../../ffg/img/Cap04.dds"
 traits=blackrealm
 
 [TileSideEntranceSoNA]
 top=36
 left=23
-image="../ffg/img/Entrance03.dds"
+image="../../ffg/img/Entrance03.dds"
 traits=city
 
 [TileSideEntranceSoNB]
 top=36
 left=23
-image="../ffg/img/Entrance04.dds"
+image="../../ffg/img/Entrance04.dds"
 traits=blackrealm
 
 [TileSideExtensionSoNA]
 top=75
 left=23
-image="../ffg/img/Joint04.dds"
+image="../../ffg/img/Joint04.dds"
 traits=city
 
 [TileSideExtensionSoNB]
 top=75
 left=23
-image="../ffg/img/Joint03.dds"
+image="../../ffg/img/Joint03.dds"
 traits=blackrealm
 
 [TileSideTransitionSoNA]
 top=75.5
 left=23
-image="../ffg/img/Transition02.dds"
+image="../../ffg/img/Transition02.dds"
 traits=city outside transistion
 
 [TileSideTransitionSoNB]
 top=75.5
 left=23
-image="../ffg/img/Transition03.dds"
+image="../../ffg/img/Transition03.dds"
 traits=blackrealm inside
 
 [TileSideTransitionSoN2A]
 top=151
 left=151
-image="../ffg/img/Transition06.dds"
+image="../../ffg/img/Transition06.dds"
 traits=city inside transistion
 
 [TileSideTransitionSoN2B]
