--- a/content/D2E/boxed/tt/tiles.ini
+++ b/content/D2E/boxed/tt/tiles.ini
@@ -3,19 +3,19 @@
 [TileSide43A]
 top=164
 left=138
-image="../ffg/img/043A.dds"
+image="../../ffg/img/043A.dds"
 traits=outside
 
 [TileSide43B]
 top=164
 left=164
-image="../ffg/img/043B.dds"
+image="../../ffg/img/043B.dds"
 traits=inside
 
 [TileSide44A]
 top=197
 left=197
-image="../ffg/img/044A.dds"
+image="../../ffg/img/044A.dds"
 traits=outside inside transistion
 
 [TileSide44B]
@@ -35,7 +35,7 @@ traits=outside
 [TileSide45B]
 top=354.5
 left=92
-image="../ffg/img/045B.dds"
+image="../../ffg/img/045B.dds"
 traits=inside
 
 [TileSide46A]
@@ -48,7 +48,7 @@ traits=outside
 [TileSide46B]
 top=111.5
 left=46
-image="../ffg/img/046B.dds"
+image="../../ffg/img/046B.dds"
 traits=water inside
 
 [TileSide47A]
@@ -61,31 +61,31 @@ traits=outside
 [TileSide47B]
 top=151
 left=151
-image="../ffg/img/047B.dds"
+image="../../ffg/img/047B.dds"
 traits=inside
 
 [TileSide48A]
 top=144.5
 left=144.5
-image="../ffg/img/048A.dds"
+image="../../ffg/img/048A.dds"
 traits=outside water
 
 [TileSide48B]
 top=144.5
 left=144.5
-image="../ffg/img/048B.dds"
+image="../../ffg/img/048B.dds"
 traits=water inside
 
 [TileSide49A]
 top=144.5
 left=144.5
-image="../ffg/img/049A.dds"
+image="../../ffg/img/049A.dds"
 traits=outside
 
 [TileSide49B]
 top=144.5
 left=144.5
-image="../ffg/img/049B.dds"
+image="../../ffg/img/049B.dds"
 traits=inside water
 
 [TileSideS2A]
@@ -96,5 +96,5 @@ traits=outside
 [TileSideS2B]
 top=98.5
 left=46
-image="../ffg/img/S2B.dds"
+image="../../ffg/img/S2B.dds"
 traits=inside
