--- a/content/D2E/h&m/cod/monsters.ini
+++ b/content/D2E/h&m/cod/monsters.ini
@@ -1,6 +1,6 @@
 [MonsterGiant]
 ; name=""
-image="../ffg/img/Monster_Giant.dds"
+image="../../ffg/img/Monster_Giant.dds"
 info={ffg:INSTRUCTION_GIANTS}
 traits=melee mountain wilderness huge
 ; fixme unknown?
@@ -8,7 +8,7 @@ traits=melee mountain wilderness huge
 
 [MonsterChaosBeast]
 name="Chaos Beast"
-image="../ffg/img/Monster_ChaosBeast.dds"
+image="../../ffg/img/Monster_ChaosBeast.dds"
 info={ffg:INSTRUCTION_CHAOS_BEAST}
 traits=ranged dark cursed huge
 ; fixme unknown?
@@ -16,7 +16,7 @@ traits=ranged dark cursed huge
 
 [MonsterLavaBeetle]
 name="Lava Beetle"
-image="../ffg/img/Monster_LavaBeetle.dds"
+image="../../ffg/img/Monster_LavaBeetle.dds"
 info={ffg:INSTRUCTION_LAVA_BEETLE}
 traits=ranged cave hot small
 ; fixme unknown?
