Hero selection now working.

--- a/content/D2E/h&m/toc/heros.ini
+++ b/content/D2E/h&m/toc/heros.ini
@@ -12,7 +12,7 @@ traits=male
 
 [HeroGreyKey]
 name="Grey Key"
-image="../../ffg/img/Hero_GreyKey.dds"
+image="../../ffg/img/Hero_GreyKer.dds"
 archetype=scout
 traits=male
 
