Adding monster placement images.

--- a/content/D2E/boxed/son/monsters.ini
+++ b/content/D2E/boxed/son/monsters.ini
@@ -5,6 +5,7 @@ info={ffg:INSTRUCTION_RAT_SWARM}
 traits=melee building dark medium
 ; fixme unknown?
 ;activation=Range1 Range2 Range3
+imageplace="../../ffg/img/Monster_RatSwarm_Placement.dds"
 
 [MonsterChangeling]
 ; name=""
