--- a/content/D2E/boxed/tctr/monsters.ini
+++ b/content/D2E/boxed/tctr/monsters.ini
@@ -21,3 +21,4 @@ info={ffg:INSTRUCTION_SHAMBLING_COLOSSUS}
 traits=melee cursed wilderness medium
 ; fixme unknown?
 ;activation=Range1 Range2 Range3
+imageplace="../../ffg/img/Monster_ShamblingColossus_Placement.dds"
