--- a/content/D2E/boxed/tt/monsters.ini
+++ b/content/D2E/boxed/tt/monsters.ini
@@ -13,3 +13,4 @@ info={ffg:INSTRUCTION_PLAGUE_WORM}
 traits=melee water cave medium
 ; fixme unknown?
 ;activation=Range1 Range2 Range3
+imageplace="../../ffg/img/Monster_PlagueWorm_Placement.dds"
