Fixing monster image paths.

--- a/content/D2E/h&m/god/monsters.ini
+++ b/content/D2E/h&m/god/monsters.ini
@@ -1,6 +1,7 @@
 [MonsterCryptDragon]
 name="Crypt Dragon"
-image="../../ffg/img/Monster_Crypt_Dragon.dds"
+image="../../ffg/img/Monster_CryptDragon.dds"
+imageplace="../../ffg/img/Monster_CryptDragon_Placement.dds"
 info={ffg:INSTRUCTION_CRYPT_DRAGON}
 traits=ranged cursed dark massive
 ; fixme unknown?
@@ -8,7 +9,7 @@ traits=ranged cursed dark massive
 
 [MonsterDarkPriest]
 name="Dark Priest"
-image="../../ffg/img/Monster_Dark_Priest.dds"
+image="../../ffg/img/Monster_DarkPriest.dds"
 info={ffg:INSTRUCTION_DARK_PRIEST}
 traits=ranged civilised cursed small
 ; fixme unknown?
