Finishing BotW and VoD.

--- a/content/D2E/h&m/botw/activations.ini
+++ b/content/D2E/h&m/botw/activations.ini
@@ -1,98 +1,59 @@
 ; fixme minion first?
-[Monster]
-ability={ffg:}
-minion={ffg:}
-master={ffg:}
-EFFECT_KOBOLD_1,"After each master Kobold attacks, place 1 minion Kobold adjacent to the target."
-KOBOLD_1_MINION_0,"∞ Engage the closest hero.
-∞ Attack the adjacent hero with the highest Speed."
-KOBOLD_1_MASTER_0,"∞ Engage the hero within 4 spaces of this monster with the most Kobolds adjacent.
-∞ Engage the closest hero.
-∞ Attack the adjacent hero with the most Kobolds adjacent.
-∞ If within 2 spaces of a hero, perform a move action and retreat."
-EFFECT_KOBOLD_2,"Each time a Kobold enters a space adjacent to 1 or more Kobolds, it gains 1 movement point."
-KOBOLD_2_MINION_0,"∞ Engage the closest hero.
-∞ Attack the adjacent hero with the most ≥ suffered."
-KOBOLD_2_MASTER_0,"∞ Engage the hero with the most Kobolds adjacent.
-∞ Attack the adjacent hero with the most Kobolds adjacent.
-∞ If within 2 spaces of a hero, perform a move action and retreat."
-EFFECT_KOBOLD_3,Each hero immediately tests ∑. Each hero who fails places 1 kobold adjacent to another kobold.
-KOBOLD_3_MINION_0,"∞ Engage the closest hero.
-∞ Attack the adjacent hero with the most ≥ suffered."
-KOBOLD_3_MASTER_0,"∞ Engage the hero within 4 spaces of this monster with the most Kobolds adjacent.
-∞ Engage the closest hero.
-∞ Attack the adjacent hero with the most Kobolds adjacent.
-∞ If within 2 spaces of a hero, perform a move action and retreat."
-EFFECT_KOBOLD_4,Each hero adjacent to 1 or more kobolds immediately tests ∂; each hero adds 1 ≤ to his results for each adjacent kobold. Each hero who fails is Stunned.
-KOBOLD_4_MINION_0,"∞ Engage the closest hero.
-∞ Attack the adjacent hero with the most ≥ suffered."
-KOBOLD_4_MASTER_0,"∞ Engage the hero within 4 spaces of this monster with the most Kobolds adjacent.
-∞ Engage the closest hero.
-∞ Attack the adjacent hero with the most Kobolds adjacent.
-∞ If within 2 spaces of a hero, perform a move action and retreat."
+[MonsterActivationKobold1]
+ability={ffg:EFFECT_KOBOLD_1}
+minion={ffg:KOBOLD_1_MINION_0}
+master={ffg:KOBOLD_1_MASTER_0}
 
 ; fixme minion first?
-[Monster]
-ability={ffg:}
-minion={ffg:}
-master={ffg:}
-EFFECT_HELLHOUND_1,Each hero with 1 or more faceup Search cards immediately tests ∑. Each hero who fails places 1 hellhound adjacent to him.
-HELLHOUND_1_MINION_0,"∞ Engage the hero within 3 spaces of this monster with the most faceup Search cards.
-∞ Engage the closest hero.
-∞ Attack the adjacent hero with the most faceup Search cards. Then retreat.
-∞ If adjacent to a hero, perform a move action and retreat."
-HELLHOUND_1_MASTER_0,"∞ Engage the hero within 3 spaces of this monster with the most faceup Search cards.
-∞ Engage the closest hero.
-∞ Attack the adjacent hero with the most faceup Search cards. Then retreat.
-∞ If adjacent to a hero, perform a move action and retreat."
-EFFECT_HELLHOUND_2,"Each hero immediately tests π and adds ≤ equal to the number of Shop Item cards he has. Each hero who fails places his figure adjacent to the master hellhound; if he cannot, he suffers 3 ≥."
-HELLHOUND_2_MINION_0,"∞ Engage the hero within 3 spaces of this monster with the highest cost Shop Item card.
-∞ Engage the closest hero.
-∞ Attack the adjacent hero with the highest cost Shop Item card. Then retreat.
-∞ If adjacent to a hero, perform a move action and retreat."
-HELLHOUND_2_MASTER_0,"∞ Engage the hero within 3 spaces of this monster with the highest cost Shop Item card.
-∞ Engage the closest hero.
-∞ Attack the adjacent hero with the highest cost Shop Item card. Then retreat.
-∞ If adjacent to a hero, perform a move action and retreat."
-EFFECT_HELLHOUND_3,Each hero who suffers ≥ during an attack suffers additional ≥ equal to the number of Shop Item cards he has equipped.
-HELLHOUND_3_MINION_0,"∞ Engage the hero within 6 spaces of this monster with the most Health remaining.
-∞ Engage the closest hero.
-∞ Attack the adjacent hero with the most Health remaining. Then retreat."
-HELLHOUND_3_MASTER_0,"∞ Engage the hero within 6 spaces of this monster with the most Health remaining.
-∞ Engage the closest hero.
-∞ Attack the adjacent hero with the most Health remaining. Then retreat."
-EFFECT_HELLHOUND_4,Each hero who suffers ≥ from an attack is Burning.
-HELLHOUND_4_MINION_0,"∞ Engage a hero within 5 spaces who is not Burning.
-∞ Engage the closest hero.
-∞ Attack an adjacent hero who is not Burning. Then retreat.
-∞ Attack an adjacent hero. Then retreat."
-HELLHOUND_4_MASTER_0,"∞ Engage a hero within 5 spaces who is not Burning.
-∞ Engage the closest hero.
-∞ Attack an adjacent hero who is not Burning. Then retreat.
-∞ Attack an adjacent hero. Then retreat."
-; fixme minion first?
-[Monster]
-ability={ffg:}
-minion={ffg:}
-master={ffg:}
+[MonsterActivationKobold2]
+ability={ffg:EFFECT_KOBOLD_2}
+minion={ffg:KOBOLD_2_MINION_0}
+master={ffg:KOBOLD_2_MASTER_0}
 
-EFFECT_DEEP_ELF_1,"The hero with the lowest μ tests μ. If he fails, place each Deep Elf on the map adjacent to that hero."
-DEEP_ELF_1_MINION_0,"∞ Engage the closest hero.
-∞ Attack the adjacent hero with the lowest μ. Then retreat.
-∞ If adjacent to a hero, perform a move action and retreat."
-DEEP_ELF_1_MASTER_0,"∞ Engage the closest hero.
-∞ Attack the adjacent hero with the lowest μ."
-EFFECT_DEEP_ELF_2,"Each time a Deep Elf defeats a hero, that Deep Elf immediately attacks another hero."
-DEEP_ELF_2_MINION_0,"∞ Engage as many heroes as possible within 6 spaces of this monster.
-∞ Engage the closest hero.
-∞ Attack the adjacent hero with the least Health remaining. Then retreat."
-DEEP_ELF_2_MASTER_0,"∞ Engage as many heroes as possible within 6 spaces of this monster.
-∞ Engage the closest hero.
-∞ Attack the adjacent hero with the least Health remaining."
-EFFECT_DEEP_ELF_3,Heroes cannot use Heroic Feats or exhaust cards during this activation.
-DEEP_ELF_3_MINION_0,"∞ Engage the hero within 6 spaces of this monster with the most ≥ suffered.
-∞ Engage the closest hero.
-∞ Attack the adjacent hero with the most ≥ suffered. Then retreat."
-DEEP_ELF_3_MASTER_0,"∞ Engage the hero within 6 spaces of this monster with the least ≥ suffered.
-∞ Engage the closest hero.
-∞ Attack the adjacent hero with the least ≥ suffered. "
+; fixme minion first?
+[MonsterActivationKobold3]
+ability={ffg:EFFECT_KOBOLD_3}
+minion={ffg:KOBOLD_3_MINION_0}
+master={ffg:KOBOLD_3_MASTER_0}
+
+; fixme minion first?
+[MonsterActivationKobold4]
+ability={ffg:EFFECT_KOBOLD_4}
+minion={ffg:KOBOLD_4_MINION_0}
+master={ffg:KOBOLD_4_MASTER_0}
+
+; fixme minion first?
+[MonsterActivationHellhound1]
+ability={ffg:EFFECT_HELLHOUND_1}
+minion={ffg:HELLHOUND_1_MINION_0}
+master={ffg:HELLHOUND_1_MASTER_0}
+
+; fixme minion first?
+[MonsterActivationHellhound2]
+ability={ffg:EFFECT_HELLHOUND_2}
+minion={ffg:HELLHOUND_2_MINION_0}
+master={ffg:HELLHOUND_2_MASTER_0}
+
+; fixme minion first?
+[MonsterActivationHellhound3]
+ability={ffg:EFFECT_HELLHOUND_3}
+minion={ffg:HELLHOUND_3_MINION_0}
+master={ffg:HELLHOUND_3_MASTER_0}
+
+; fixme minion first?
+[MonsterActivationDeepElf1]
+ability={ffg:EFFECT_DEEP_ELF_1}
+minion={ffg:DEEP_ELF_1_MINION_0}
+master={ffg:DEEP_ELF_1_MASTER_0}
+
+; fixme minion first?
+[MonsterActivationDeepElf2]
+ability={ffg:EFFECT_DEEP_ELF_2}
+minion={ffg:DEEP_ELF_2_MINION_0}
+master={ffg:DEEP_ELF_2_MASTER_0}
+
+; fixme minion first?
+[MonsterActivationDeepElf3]
+ability={ffg:EFFECT_DEEP_ELF_3}
+minion={ffg:DEEP_ELF_3_MINION_0}
+master={ffg:DEEP_ELF_3_MASTER_0}
