--- a/content/D2E/h&m/botw/monsters.ini
+++ b/content/D2E/h&m/botw/monsters.ini
@@ -9,7 +9,7 @@ traits=melee cave building small
 [MonsterHellhound]
 ; name=""
 image="../../ffg/img/Monster_Hellhound.dds"
-; place image
+imageplace="../../ffg/img/Monster_Hellhound_Placement.dds"
 info={ffg:INSTRUCTION_HELLHOUND}
 traits=melee hot cursed medium
 ; fixme unknown?
