--- a/content/D2E/h&m/vod/monsters.ini
+++ b/content/D2E/h&m/vod/monsters.ini
@@ -1,7 +1,7 @@
 [MonsterManticore]
 ; name=""
 image="../../ffg/img/Monster_Manticore.dds"
-; place image
+imageplace="../../ffg/img/Monster_Manticore_Placement.dds"
 info={ffg:INSTURCTION_MANTICORE}
 traits=ranged wilderness dark medium
 ; fixme unknown?
