--- a/content/D2E/boxed/mor/activations.ini
+++ b/content/D2E/boxed/mor/activations.ini
@@ -45,3 +45,9 @@ master={ffg:SHAMBLING_COLOSSUS_RAVENS_MASTER_0}
 ability={ffg:EFFECT_DARK_PRIEST_4}
 minion={ffg:DARK_PRIEST_4_MINION_0}
 master={ffg:DARK_PRIEST_4_MASTER_0}
+
+; fixme minion first?
+[MonsterActivationDarkMinotaur4]
+ability={ffg:EFFECT_DARK_MINOTAUR_4}
+minion={ffg:DARK_MINOTAUR_4_MINION}
+master={ffg:DARK_MINOTAUR_4_MASTER}
