--- a/content/D2E/h&m/sots/monsters.ini
+++ b/content/D2E/h&m/sots/monsters.ini
@@ -9,7 +9,8 @@ traits=melee cave water small
 [MonsterBloodApe]
 name="Blood Ape"
 image="../../ffg/img/Monster_BloodApe.dds"
-imageplace="../../ffg/img/Monster_BloodApe_Placement.dds"
+; This is missing so we'll just use the normal image stretched
+; imageplace="../../ffg/img/Monster_BloodApe_Placement.dds"
 info={ffg:INSTRUCTION_BLOOD_APE}
 traits=melee hot cave medium
 ; fixme unknown?
