--- a/content/MoM/cotw/tiles.ini
+++ b/content/MoM/cotw/tiles.ini
@@ -6,6 +6,12 @@ image="../ffg/img/Tile_Barn_MAD09.dds"
 aspect=1.5
 pps=146.28571
 
+[TileSideCampsite]
+image="img/Tile_Campsite_MAD09.jpg"
+
+[TileSideCaveBend]
+image="img/Tile_Cave_Bend_MAD09.jpg"
+
 [TileSideCaveEntrance]
 image="../ffg/img/Tile_Cave_Entrance_MAD09.dds"
 
@@ -31,11 +37,20 @@ image="../ffg/img/Tile_Old_Oak_MAD09.dds"
 [TileSideOldWell]
 image="../ffg/img/Tile_Old_Well_MAD09.dds"
 
+[TileSideOuthouse]
+image="img/Tile_Outhouse_MAD09.jpg"
+
+[TileSidePigPen]
+image="img/Tile_Pingpen_MAD09.jpg"
+
 [TileSidePond]
 image="../ffg/img/Tile_Pond_MAD09.dds"
 
 [TileSideRitualSite]
 image="../ffg/img/Tile_Ritual_Site_MAD09.dds"
+
+[TileSideRiverBend]
+image="../ffg/img/Tile_River_Bend_1_MAD09.jpg"
 
 [TileSideRiverRapids]
 image="../ffg/img/Tile_River_Rapids_MAD09.dds"
