--- a/content/MoM/mom1e/tiles.ini
+++ b/content/MoM/mom1e/tiles.ini
@@ -4,11 +4,23 @@ image="../ffg/img/Tile_Attic_Loft_MAD01.dds"
 [TileSideBasementLanding]
 image="../ffg/img/Tile_Basement_Landing_MAD01.dds"
 
+[TileSideCave1]
+image="img/Tile_Cave_1_MAD01.jpg"
+
+[TileSideCave2]
+image="img/Tile_Cave_2_MAD01.jpg"
+
 [TileSideCeremonyRoom]
 image="../ffg/img/Tile_Ceremony_Room_MAD01.dds"
 
 [TileSideChapel]
 image="../ffg/img/Tile_Chapel_MAD01.dds"
+
+[TileSideChasm]
+image="img/Tile_Chasm_MAD01.jpg"
+
+[TileSideCornerHallway]
+image="img/Tile_Corner_Hallway_1_MAD01.jpg"
 
 [TileSideCrypt]
 image="../ffg/img/Tile_Crypt_MAD01.dds"
@@ -23,6 +35,11 @@ pps=146.28571
 
 [TileSideFrontPorch]
 image="../ffg/img/Tile_Front_Porch_MAD01.dds"
+
+[TileSideFrontYard]
+image="img/Tile_Front_Yard_MAD01.jpg"
+aspect=1.5
+pps=146.28571
 
 [TileSideFurnaceRoom]
 image="../ffg/img/Tile_Furnace_Room_MAD01.dds"
@@ -39,6 +56,9 @@ image="../ffg/img/Tile_Graveyard_MAD01.dds"
 [TileSideGuestBedroom]
 image="../ffg/img/Tile_Guest_Bedroom_MAD01.dds"
 
+[TileSideHallway1]
+image="img/Tile_Hallway_1_MAD01.dds"
+
 [TileSideHallway2]
 image="../ffg/img/Tile_Hallway_2_MAD01.dds"
 
@@ -47,6 +67,9 @@ image="../ffg/img/Tile_Hallway_3_MAD01.dds"
 
 [TileSideHallway4]
 image="../ffg/img/Tile_Hallway_4_MAD01.dds"
+
+[TileSideLaboratory]
+image="img/Tile_Laboratory_MAD01.jpg"
 
 [TileSideLibrary1E]
 image="../ffg/img/Tile_Library_MAD01.dds"
@@ -59,6 +82,9 @@ image="../ffg/img/Tile_Nursery_MAD01.dds"
 
 [TileSideRootCellar]
 image="../ffg/img/Tile_Root_Cellar_MAD01.dds"
+
+[TileSideSecretPassage]
+image="img/Tile_Secret_Passage_MAD01.jpg"
 
 [TileSideStorageShed]
 image="../ffg/img/Tile_Storage_Shed_MAD01.dds"
