--- a/content/MoM/fa/tiles.ini
+++ b/content/MoM/fa/tiles.ini
@@ -1,3 +1,6 @@
+[TileSideCave3]
+image="img/Tile_Cave_3_MAD06.jpg"
+
 [TileSideGeneratorRoom]
 image="../ffg/img/Tile_Generator_Room_MAD06.dds"
 
@@ -19,8 +22,14 @@ image="../ffg/img/Tile_Medical_Storage_MAD06.dds"
 [TileSideMorgue]
 image="../ffg/img/Tile_Morgue_MAD06.dds"
 
+[TileSideObservationRoom]
+image="img/Tile_Observation_Room_MAD06.jpg"
+
 [TileSideOfficeFA]
 image="../ffg/img/Tile_Office_MAD06.dds"
+
+[TileSideOperatingTheater]
+image="img/Tile_Operating_Theater_MAD06.jpg"
 
 [TileSideRooftop]
 image="../ffg/img/Tile_Rooftop_MAD06.dds"
