Changed pps for Missing tiles

--- a/content/MoM/base/tiles.ini
+++ b/content/MoM/base/tiles.ini
@@ -12,6 +12,7 @@ image="../ffg/img/Tile_Alley_Corner_2_MAD20.dds"
 
 [TileSideAlleyEnd]
 image="img/Tile_Alley_End_MAD20.jpg"
+pps=72
 
 [TileSideAttic]
 image="../ffg/img/Tile_Attic_MAD20.dds"
@@ -57,6 +58,7 @@ image="../ffg/img/Tile_Entry_Hall_MAD20.dds"
 
 [TileSideFleaMarket]
 image="img/Tile_Flea_Market_MAD20.jpg"
+pps=72
 
 [TileSideHall1]
 image="../ffg/img/Tile_Hall_1_MAD20.dds"
