--- a/content/MoM/cotw/tiles.ini
+++ b/content/MoM/cotw/tiles.ini
@@ -8,9 +8,11 @@ pps=146.28571
 
 [TileSideCampsite]
 image="img/Tile_Campsite_MAD09.jpg"
+pps=72
 
 [TileSideCaveBend]
 image="img/Tile_Cave_Bend_MAD09.jpg"
+pps=72
 
 [TileSideCaveEntrance]
 image="../ffg/img/Tile_Cave_Entrance_MAD09.dds"
@@ -39,9 +41,11 @@ image="../ffg/img/Tile_Old_Well_MAD09.dds"
 
 [TileSideOuthouse]
 image="img/Tile_Outhouse_MAD09.jpg"
+pps=72
 
 [TileSidePigPen]
 image="img/Tile_Pingpen_MAD09.jpg"
+pps=72
 
 [TileSidePond]
 image="../ffg/img/Tile_Pond_MAD09.dds"
@@ -51,6 +55,7 @@ image="../ffg/img/Tile_Ritual_Site_MAD09.dds"
 
 [TileSideRiverBend]
 image="../ffg/img/Tile_River_Bend_1_MAD09.jpg"
+pps=72
 
 [TileSideRiverRapids]
 image="../ffg/img/Tile_River_Rapids_MAD09.dds"
