--- a/content/MoM/fa/tiles.ini
+++ b/content/MoM/fa/tiles.ini
@@ -1,5 +1,6 @@
 [TileSideCave3]
 image="img/Tile_Cave_3_MAD06.jpg"
+pps=72
 
 [TileSideGeneratorRoom]
 image="../ffg/img/Tile_Generator_Room_MAD06.dds"
@@ -24,12 +25,14 @@ image="../ffg/img/Tile_Morgue_MAD06.dds"
 
 [TileSideObservationRoom]
 image="img/Tile_Observation_Room_MAD06.jpg"
+pps=72
 
 [TileSideOfficeFA]
 image="../ffg/img/Tile_Office_MAD06.dds"
 
 [TileSideOperatingTheater]
 image="img/Tile_Operating_Theater_MAD06.jpg"
+pps=72
 
 [TileSideRooftop]
 image="../ffg/img/Tile_Rooftop_MAD06.dds"
