--- a/content/MoM/mom1e/tiles.ini
+++ b/content/MoM/mom1e/tiles.ini
@@ -6,9 +6,11 @@ image="../ffg/img/Tile_Basement_Landing_MAD01.dds"
 
 [TileSideCave1]
 image="img/Tile_Cave_1_MAD01.jpg"
+pps=72
 
 [TileSideCave2]
 image="img/Tile_Cave_2_MAD01.jpg"
+pps=72
 
 [TileSideCeremonyRoom]
 image="../ffg/img/Tile_Ceremony_Room_MAD01.dds"
@@ -18,9 +20,11 @@ image="../ffg/img/Tile_Chapel_MAD01.dds"
 
 [TileSideChasm]
 image="img/Tile_Chasm_MAD01.jpg"
+pps=72
 
 [TileSideCornerHallway]
 image="img/Tile_Corner_Hallway_1_MAD01.jpg"
+pps=72
 
 [TileSideCrypt]
 image="../ffg/img/Tile_Crypt_MAD01.dds"
@@ -38,6 +42,7 @@ image="../ffg/img/Tile_Front_Porch_MAD01.dds"
 
 [TileSideFrontYard]
 image="img/Tile_Front_Yard_MAD01.jpg"
+pps=72
 
 [TileSideFurnaceRoom]
 image="../ffg/img/Tile_Furnace_Room_MAD01.dds"
@@ -68,6 +73,7 @@ image="../ffg/img/Tile_Hallway_4_MAD01.dds"
 
 [TileSideLaboratory]
 image="img/Tile_Laboratory_MAD01.jpg"
+pps=72
 
 [TileSideLibrary1E]
 image="../ffg/img/Tile_Library_MAD01.dds"
@@ -83,6 +89,7 @@ image="../ffg/img/Tile_Root_Cellar_MAD01.dds"
 
 [TileSideSecretPassage]
 image="img/Tile_Secret_Passage_MAD01.jpg"
+pps=72
 
 [TileSideStorageShed]
 image="../ffg/img/Tile_Storage_Shed_MAD01.dds"
