FIxing river bend path.

--- a/content/MoM/cotw/tiles.ini
+++ b/content/MoM/cotw/tiles.ini
@@ -54,7 +54,7 @@ image="../ffg/img/Tile_Pond_MAD09.dds"
 image="../ffg/img/Tile_Ritual_Site_MAD09.dds"
 
 [TileSideRiverBend]
-image="../ffg/img/Tile_River_Bend_1_MAD09.jpg"
+image="img/Tile_River_Bend_1_MAD09.jpg"
 pps=72
 
 [TileSideRiverRapids]
